2003-10-07  Alexandre Oliva  <aoliva@redhat.com>

* gcc.c (cpp_options): Only pass -fworking-directory for -g* if
	not overridden.
	Fixes PR bootstrap/12173.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@72201 138bc75d-0d04-0410-961f-82ee72b054a4